--- a/ShulSchedules/styles.css
+++ b/ShulSchedules/styles.css
@@ -1,21 +1,8 @@
 body {
     max-width: 100vw;
-}
-header {
-    width: 100vw;
-    height: 100px;
     background-color: lightblue;
 }
-header a {
-    display: block;
-    width: 33%;
-    height: 100%;
-    float: left;
-    text-align: center;
-}
-header a span {
-    vertical-align: center;
-}
+
 
 main {
     padding: 10px 20px 30px 20px;
@@ -36,8 +23,11 @@ main {
     margin-right: 5px;
 }
 .shulDiv {
-    padding: 20px;
-    font-size: 20px;
+    background-color: white;
+    text-align: center;
+    padding: 10px;
+    border-radius: 10px;
+    margin: 10px;
 }
 .shulDiv, h1 {
     display: inline-block;
