--- a/Home/homeStyles.css
+++ b/Home/homeStyles.css
@@ -4,24 +4,23 @@ body {
     max-width: 100vw;
     overflow: hidden;
 }
-header, header table {
-    height: 75px;
-    width: 100%;
-    text-align: center;
+header {
+    width: calc(100% - 10px);
+    height: 85px;
     padding: 5px;
+    display: flex;
+    justify-content: space-around;
 }
 
-td {
-    width: 33.3333%;
-}
 button {
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
+    margin: 5px;
 }
 .opened {
     border: 2px solid black;
 }
 iframe {
     width: 100%;
-    height: calc(100% - 85px);
+    height: calc(100% - 95px);
 }
